# Awa-Dapp

./: readme.md
backend/: package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/contract/: contract.class.ts  transfer-contract.class.ts
backend/src/guess/: guess.controller.ts  guess.mocks.ts  guess.module.ts  guess.service.ts
backend/src/guess/dto/: guess.request.ts
graph/: .env.sample  .gitignore  README.md  networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
graph/src/mappings/: helper.ts  index.ts
near/: .gitignore  package.json
near/.parcel-cache/: lock.mdb
near/contract/: Cargo.toml  build.sh
near/contract/src/: lib.rs
near/frontend/: App.js  index.html
near/frontend/apis/: guess.js
near/frontend/assets/css/: global.css
near/frontend/assets/js/near/: config.js  utils.js
near/neardev/: dev-account.env.example  dev-account.example
